# TanfolyamRobot

./: README.md  USER_GUIDE.md  start_telemetry.bat
docs/: README.md  function_docs.docx
esp/: ESPfirmware.ino  esp-stm32_comm.md  esp.ino
esp/ESP_firmware/: ESP_firmware.ino
esp/serial_test/: serial_test.ino
firmware/: .cproject  .gitignore  .mxproject  .project  README.md  STM32F103R8TX_FLASH.ld  tanfolyamrobot Release.launch  tanfolyamrobot.ioc  upload.sh
firmware/Application/: app_interface.h  application.c  application.h  test_application.c
firmware/LaunchConfig/: Upload with DFU (Linux).launch  Upload with DFU (Windows).launch  Upload with DFU 2.0 (Windows).launch  Upload with DFU 2.0 - Release.launch  Upload with DFU 3.0 - Debug (Linux).launch  Upload with DFU 3.0 - Debug (Windows).launch  Upload with DFU 3.0 - Release (Linux).launch  Upload with DFU 3.0 - Release (Windows).launch
firmware/Main/: config.h  control.c  control.h  interruptHandler.c  main_interface.h  robotInstance.h  telemetry.c  telemetry.h
firmware/RobotApi/: api_misc.h  api_robotAbstraction.c  api_robotAbstraction.h  robotAbstraction-api.h  robotAbstraction.c
firmware/tools/: README.md  (+4 more)
firmware/tools/ftdi_uploader/: .gitignore  CMakeLists.txt  main.cpp  modprobe-config.sh  udev-setup.sh
firmware/tools/ftdi_uploader/libftd2xx/include/: WinTypes.h
pcb/: .gitignore  JLC-modified.cam  README.md  STM32F103_pin_assignment.xls  eagle.epf  tanfolyamrobot.brd  tanfolyamrobot.sch
react-robot-dashboard/: .gitignore  poster.py  start.sh  tanfrobot-telemetry.service  telemetry_setup.sh
(+195 files in other folders)
